# watchtower-monitor

./: .env  Cargo.toml  README.md
migrations/2023-08-17-140230_watchtowers/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
