[package]
name = "watchtower-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
diesel = { version = "2.1.0", features = ["mysql"] }
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]